# array_record

./: BUILD  MODULE.bazel  WORKSPACE  requirements.in  requirements_lock.txt  setup.py
.github/workflows/: build_and_publish.yml
cpp/: BUILD  array_record_reader.cc  array_record_reader.h  array_record_reader_test.cc  array_record_writer.cc  array_record_writer_test.cc
oss/: build.Dockerfile  build_whl.sh  runner_common.sh  test_with_grain.py  test_with_tf.py
python/: BUILD  array_record_data_source.py  array_record_data_source_test.py  array_record_module_test.py
